<resources>
    <string name="app_name">Pie Message</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="insert_number"><![CDATA[<Insert Number>]]></string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="reply_label">Reply</string>

<<<<<<< HEAD
    <string name="pref_socket_address_key">prefSocketAddress</string>
    <string name="pref_password">prefPassword</string>
    <string name="ask_ip">Server IP Address</string>
    <string name="ask_pass">Password</string>
    <string name="login">Login</string>
    <string name="to">To:</string>
    <string name="back_arrow">Back arrow</string>
    <string name="send">Send</string>
    <string name="unknown_name">Unknown name</string>
    <string name="msg_content">Message content here</string>
    <string name="name">Name</string>
    <string name="msg">Message</string>
    <string name="unknown_date">Date</string>
    <string name="checkmark_button">Checkmark button</string>
    <string name="edit">Edit</string>
    <string name="messages">Messages</string>
    <string name="compose_button">Compose button</string>
    <string name="login_prompt">Enter your server IP and password</string>
    <string name="recipient">Recipient</string>
    <string name="send_button">Send button</string>
    <string name="message">Message</string>
    <string name="info_button">Info button</string>
=======
    <string name="hello_world">Hello world!</string>
>>>>>>> parent of fec3bbf... Merge pull request #17 from bboyairwreck/ericChee-UniversalAPKWithIPAddressInput
</resources>
