<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
              tools:context="com.ericchee.bboyairwreck.piemessage.ChatsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGrey"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="55sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/edit"
            android:textAlignment="center"
            android:textColor="@color/azureBlue"
            android:textSize="18sp"
        />

        <TextView
            android:id="@+id/tvMessageTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="@string/messages"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <ImageButton
            android:id="@+id/composeButton"
            android:layout_width="55sp"
            android:layout_height="55sp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:contentDescription="@string/compose_button"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:src="@drawable/compose_button_24dp"
            android:tint="@color/azureBlue"
        />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <include layout="@layout/content_chats"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"/>

    <!--<android.support.design.widget.FloatingActionButton
            android:id="@+id/fabNewMessage"
            app:borderWidth="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/fab_margin"
            android:src="@mipmap/plus_icon"/>-->

</LinearLayout>
