<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
              tools:context="com.ericchee.bboyairwreck.piemessage.MessageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGrey"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_arrow"
            android:scaleType="fitCenter"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/ic_chevron_left_black_24dp"
            android:tint="@color/azureBlue"
            android:visibility="visible"
        />

        <TextView
            android:id="@+id/tvTarget"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/recipient"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/etTarget"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/recipient"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="22sp"
            android:visibility="gone"
        />

        <ImageButton
            android:id="@+id/infoButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:contentDescription="@string/info_button"
            android:scaleType="fitCenter"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_info_outline_black_24dp"
            android:tint="@color/azureBlue"
            android:visibility="visible"
        />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <include
        layout="@layout/content_message"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

</LinearLayout>
